[gd_scene load_steps=45 format=2]

[ext_resource path="res://tiles.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/Controller.gd" type="Script" id=2]
[ext_resource path="res://images/mario-small.png" type="Texture" id=3]
[ext_resource path="res://scripts/Mario.gd" type="Script" id=4]
[ext_resource path="res://sounds/jump-small.wav" type="AudioStream" id=5]
[ext_resource path="res://images/quote-block.png" type="Texture" id=6]
[ext_resource path="res://scripts/QuoteBlock.gd" type="Script" id=7]
[ext_resource path="res://sounds/bump.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/coin.wav" type="AudioStream" id=9]
[ext_resource path="res://images/mario.png" type="Texture" id=10]
[ext_resource path="res://scripts/Brick.gd" type="Script" id=11]
[ext_resource path="res://sounds/breakblock.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/powerup_appears.wav" type="AudioStream" id=13]
[ext_resource path="res://PowerUp.gd" type="Script" id=14]
[ext_resource path="res://Fungus.gd" type="Script" id=15]
[ext_resource path="res://sounds/powerup.wav" type="AudioStream" id=16]
[ext_resource path="res://images/grown-up-mario.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 17 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 17 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "turn",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "turn",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=9]
resource_name = "consume"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.0473662 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "consumed",
"speed": 5.0
} ]

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.0473662 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.0473662 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=18]
resource_name = "bounce"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.0669859 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.0473662 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=20]
radius = 8.0

[node name="LevelOne" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 160.0 ]
}

[node name="Controller" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Mario" type="KinematicBody2D" parent="."]
position = Vector2( 48, 152 )
z_index = 2
script = ExtResource( 4 )
starting_position = Vector2( 48, 168 )

[node name="Camera" type="Camera2D" parent="Mario"]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 192
drag_margin_h_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="GrownUpSprite" type="AnimatedSprite" parent="Mario"]
visible = false
frames = SubResource( 21 )
animation = "idle"
offset = Vector2( 0, -7 )

[node name="SmallSprite" type="AnimatedSprite" parent="Mario"]
frames = SubResource( 7 )
animation = "idle"

[node name="CollisionShape" type="CollisionPolygon2D" parent="Mario"]
polygon = PoolVector2Array( 5, 7, 5, -3, 4, -3, 4, -4, 3, -4, 3, -6, -3, -6, -3, -4, -4, -4, -4, -3, -5, -3, -5, 7 )

[node name="JumpSmall" type="AudioStreamPlayer2D" parent="Mario"]
stream = ExtResource( 5 )

[node name="Bump" type="AudioStreamPlayer2D" parent="Mario"]
position = Vector2( 224, -48 )
stream = ExtResource( 8 )

[node name="Coin" type="AudioStreamPlayer2D" parent="Mario"]
position = Vector2( 224, -48 )
stream = ExtResource( 9 )

[node name="PowerUp" type="AudioStreamPlayer2D" parent="Mario"]
position = Vector2( 304, -48 )
stream = ExtResource( 16 )

[node name="Collidables" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 196704, 11, 0, 327679, 0, 0, 262239, 11, 0, 262240, 11, 0, 393215, 0, 0, 327774, 11, 0, 327775, 11, 0, 327776, 11, 0, 458751, 0, 0, 393260, 9, 0, 393309, 11, 0, 393310, 11, 0, 393311, 11, 0, 393312, 11, 0, 524287, 0, 0, 458844, 11, 0, 458845, 11, 0, 458846, 11, 0, 458847, 11, 0, 458848, 11, 0, 589823, 0, 0, 524317, 9, 0, 524332, 10, 0, 524353, 9, 0, 524379, 11, 0, 524380, 11, 0, 524381, 11, 0, 524382, 11, 0, 524383, 11, 0, 524384, 11, 0, 655359, 0, 0, 589868, 10, 0, 589914, 11, 0, 589915, 11, 0, 589916, 11, 0, 589917, 11, 0, 589918, 11, 0, 589919, 11, 0, 589920, 11, 0, 720895, 0, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 655393, 1, 0, 655398, 1, 0, 655399, 1, 0, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655403, 1, 0, 655404, 1, 0, 655405, 1, 0, 655406, 1, 0, 655414, 1, 0, 655421, 1, 0, 655422, 1, 0, 655423, 1, 0, 655424, 1, 0, 655425, 1, 0, 655426, 1, 0, 655427, 1, 0, 655428, 1, 0, 655431, 1, 0, 655432, 1, 0, 655433, 1, 0, 655434, 1, 0, 655435, 1, 0, 655436, 1, 0, 655437, 1, 0, 655438, 1, 0, 655439, 1, 0, 655440, 1, 0, 655441, 1, 0, 655442, 1, 0, 655443, 1, 0, 655444, 1, 0, 655445, 1, 0, 655446, 1, 0, 655447, 1, 0, 655448, 1, 0, 655449, 1, 0, 655450, 1, 0, 655451, 1, 0, 655452, 1, 0, 655453, 1, 0, 655454, 1, 0, 655455, 1, 0, 655456, 1, 0, 655457, 1, 0, 655458, 1, 0, 655459, 1, 0, 655460, 1, 0, 655461, 1, 0, 655462, 1, 0, 655463, 1, 0, 655464, 1, 0, 655465, 1, 0, 655466, 1, 0, 655467, 1, 0, 655468, 1, 0, 655469, 1, 0, 655470, 1, 0, 786431, 0, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720929, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720950, 1, 0, 720957, 1, 0, 720958, 1, 0, 720959, 1, 0, 720960, 1, 0, 720961, 1, 0, 720962, 1, 0, 720963, 1, 0, 720964, 1, 0, 720967, 1, 0, 720968, 1, 0, 720969, 1, 0, 720970, 1, 0, 720971, 1, 0, 720972, 1, 0, 720973, 1, 0, 720974, 1, 0, 720975, 1, 0, 720976, 1, 0, 720977, 1, 0, 720978, 1, 0, 720979, 1, 0, 720980, 1, 0, 720981, 1, 0, 720982, 1, 0, 720983, 1, 0, 720984, 1, 0, 720985, 1, 0, 720986, 1, 0, 720987, 1, 0, 720988, 1, 0, 720989, 1, 0, 720990, 1, 0, 720991, 1, 0, 720992, 1, 0, 720993, 1, 0, 720994, 1, 0, 720995, 1, 0, 720996, 1, 0, 720997, 1, 0, 720998, 1, 0, 720999, 1, 0, 721000, 1, 0, 721001, 1, 0, 721002, 1, 0, 721003, 1, 0, 721004, 1, 0, 721005, 1, 0, 721006, 1, 0 )

[node name="Background" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 131080, 7, 0, 196646, 7, 0, 458752, 6, 0, 589835, 4, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 5, 0, 589863, 4, 0, 589864, 3, 0, 589865, 3, 0, 589866, 5, 0 )

[node name="QuoteBlocks (single coin)" type="Node2D" parent="."]

[node name="QuoteBlock" type="StaticBody2D" parent="QuoteBlocks (single coin)"]
position = Vector2( 272, 104 )
collision_layer = 2147483649
script = ExtResource( 7 )

[node name="CollisionBox" type="CollisionShape2D" parent="QuoteBlocks (single coin)/QuoteBlock"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuoteBlocks (single coin)/QuoteBlock"]
anims/consume = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="QuoteBlocks (single coin)/QuoteBlock/AnimationPlayer"]
position = Vector2( 272, 104 )
frames = SubResource( 14 )

[node name="Bump" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock"]
stream = ExtResource( 8 )

[node name="Coin" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock"]
stream = ExtResource( 9 )

[node name="QuoteBlock3" type="StaticBody2D" parent="QuoteBlocks (single coin)"]
position = Vector2( 384, 104 )
collision_layer = 2147483649
script = ExtResource( 7 )

[node name="CollisionBox" type="CollisionShape2D" parent="QuoteBlocks (single coin)/QuoteBlock3"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuoteBlocks (single coin)/QuoteBlock3"]
anims/consume = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="QuoteBlocks (single coin)/QuoteBlock3/AnimationPlayer"]
position = Vector2( 384, 104 )
frames = SubResource( 14 )

[node name="Bump" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock3"]
stream = ExtResource( 8 )

[node name="Coin" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock3"]
stream = ExtResource( 9 )

[node name="QuoteBlock4" type="StaticBody2D" parent="QuoteBlocks (single coin)"]
position = Vector2( 720, 56 )
collision_layer = 2147483649
script = ExtResource( 7 )

[node name="CollisionBox" type="CollisionShape2D" parent="QuoteBlocks (single coin)/QuoteBlock4"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuoteBlocks (single coin)/QuoteBlock4"]
anims/consume = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="QuoteBlocks (single coin)/QuoteBlock4/AnimationPlayer"]
position = Vector2( 720, 56 )
frames = SubResource( 14 )

[node name="Bump" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock4"]
stream = ExtResource( 8 )

[node name="Coin" type="AudioStreamPlayer2D" parent="QuoteBlocks (single coin)/QuoteBlock4"]
stream = ExtResource( 9 )

[node name="Bricks" type="Node2D" parent="."]

[node name="Brick" type="StaticBody2D" parent="Bricks"]
position = Vector2( 288, 104 )
collision_mask = 2
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks/Brick"]
shape = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bricks/Brick"]
anims/bounce = SubResource( 18 )

[node name="Sprite" type="Sprite" parent="Bricks/Brick/AnimationPlayer"]
position = Vector2( 288, 104 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 161, 129, 16, 16 )

[node name="Bump" type="AudioStreamPlayer2D" parent="Bricks/Brick"]
position = Vector2( 64, 0 )
stream = ExtResource( 8 )

[node name="Break" type="AudioStreamPlayer2D" parent="Bricks/Brick"]
position = Vector2( 64, 0 )
stream = ExtResource( 12 )

[node name="QuoteBlocks (power up)" type="Node2D" parent="."]

[node name="PowerUpBlock" type="StaticBody2D" parent="QuoteBlocks (power up)"]
position = Vector2( 352, 104 )
collision_layer = 2147483649
script = ExtResource( 14 )

[node name="CollisionBox" type="CollisionShape2D" parent="QuoteBlocks (power up)/PowerUpBlock"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuoteBlocks (power up)/PowerUpBlock"]
anims/consume = SubResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="QuoteBlocks (power up)/PowerUpBlock/AnimationPlayer"]
position = Vector2( 352, 104 )
frames = SubResource( 14 )

[node name="Bump" type="AudioStreamPlayer2D" parent="QuoteBlocks (power up)/PowerUpBlock"]
stream = ExtResource( 8 )

[node name="PowerUpAppears" type="AudioStreamPlayer2D" parent="QuoteBlocks (power up)/PowerUpBlock"]
stream = ExtResource( 13 )

[node name="Fungus" type="RigidBody2D" parent="QuoteBlocks (power up)/PowerUpBlock"]
visible = false
position = Vector2( 0, -16 )
z_index = -1
collision_mask = 4
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="QuoteBlocks (power up)/PowerUpBlock/Fungus"]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 288, 74, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuoteBlocks (power up)/PowerUpBlock/Fungus"]
shape = SubResource( 20 )
[connection signal="finished" from="Mario/PowerUp" to="Mario" method="_on_PowerUp_finished"]
[connection signal="body_entered" from="QuoteBlocks (power up)/PowerUpBlock/Fungus" to="QuoteBlocks (power up)/PowerUpBlock/Fungus" method="_on_Fungus_body_entered"]
